unpackaged/main/default/objects/bombora_data__Bombora_Company_Surge__c/bombora_data__Bombora_Company_Surge__c.object-meta.xml
<CustomObject>
    <description>Stores Bombora Surge Data</description>
    <label>Bombora Company Surge</label>
    <nameField>
        <label>Bombora Company Surge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bombora Company Surges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>