unpackaged/main/default/objects/bombora_data__Bombora_Company_Surge__c/fields/bombora_data__Account__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Account that this Bombora intent data is matched to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bombora Company Surges</relationshipLabel>
    <relationshipName>Bombora_Company_Surges</relationshipName>
    <type>Lookup</type>
</CustomField>