unpackaged/main/default/objects/bombora_data__Bombora_Company_Surge__c/fields/bombora_data__Active__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Deprecated as of Version 7</description>
    <label>zzz_Deprecated Active</label>
    <type>Checkbox</type>
</CustomField>