unpackaged/main/default/objects/bombora_data__Bombora_Company_Surge__c/fields/bombora_data__Average_Surge_Score__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Average_Surge_Score__c</fullName>
    <description>Average Surge Score across topics in a cluster.</description>
    <label>Intent Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>