unpackaged/main/default/objects/bombora_data__Bombora_Company_Surge__c/fields/bombora_data__Bombora_External_ID__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Bombora_External_ID__c</fullName>
    <description>Unique record ID to facilitate Bombora data matching</description>
    <externalId>true</externalId>
    <label>Bombora External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>