unpackaged/main/default/objects/bombora_data__Bombora_Company_Surge__c/fields/bombora_data__Cluster_Type__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Cluster_Type__c</fullName>
    <description>User generated cluster from Bombora UI that this intent data is associated with</description>
    <label>Cluster Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>