unpackaged/main/default/objects/bombora_data__Bombora_Company_Surge__c/fields/bombora_data__Domain__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Domain__c</fullName>
    <description>The matched domain value from Bombora Data Set</description>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>