unpackaged/main/default/objects/bombora_data__Bombora_Company_Surge__c/fields/bombora_data__Last_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Last_Active_Date__c</fullName>
    <description>Deprecated as of Version 7</description>
    <label>zzz_Deprecated Last Active Date Time</label>
    <type>DateTime</type>
</CustomField>