unpackaged/main/default/objects/bombora_data__Bombora_Company_Surge__c/fields/bombora_data__Lead__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Lead that this Bombora intent data is matched to</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Bombora Company Surges</relationshipLabel>
    <relationshipName>Bombora_Company_Surges</relationshipName>
    <type>Lookup</type>
</CustomField>