unpackaged/main/default/objects/bombora_data__Bombora_Company_Surge__c/fields/bombora_data__Signal__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Signal__c</fullName>
    <description>Deprecated as of Version 7.3</description>
    <label>zzz-Deprecated Signal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>