unpackaged/main/default/objects/bombora_data__Bombora_Company_Surge__c/fields/bombora_data__SignalStrength__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__SignalStrength__c</fullName>
    <description>Label assigned to the following bands of intent scores: 0-49 (Low), 50-59 (Baseline), 60-72 (Moderate), 73-79 (Strong), 80+ (Very Strong) Scores below 60 are not imported into Salesforce to conserve data storage meaning only Moderate, Strong and Very Strong values will be seen within Salesforce</description>
    <label>Intent Score Strength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>