unpackaged/main/default/objects/bombora_data__Bombora_Company_Surge__c/fields/bombora_data__Topic_Count__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Topic_Count__c</fullName>
    <description>Number of topics within a cluster showing relevant levels of intent</description>
    <label>Topic Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>