unpackaged/main/default/objects/bombora_data__Bombora_Company_Surge__c/fields/bombora_data__Topic_Data__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Topic_Data__c</fullName>
    <label>Topic Data</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>