unpackaged/main/default/objects/bombora_data__Bombora_Company_Surge__c/fields/bombora_data__Weekly_Topic_Count_Delta__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Weekly_Topic_Count_Delta__c</fullName>
    <description>The change over time between last week&#39;s topic count and this week&#39;s topic count</description>
    <label>Weekly Topic Count Delta</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>