unpackaged/main/default/objects/bombora_data__Bombora_Company_Surge__c/listViews/bombora_data__All.listView-meta.xml
<ListView>
    <fullName>bombora_data__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>